--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body {
     background-color: #000000;
+    font-family: var(--font-dm-sans);
 }
 
 h1 {
@@ -42,7 +43,6 @@ h1 {
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
 }
 
 .logo img {
@@ -75,7 +75,6 @@ h1 {
     border: 0px;
     font-size: 14px;
     font-weight: 700px;
-    font-family: "DM Sans", sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -115,7 +114,6 @@ h1 {
 .section-playlist__content .text {
     padding-bottom: 14px;
     color: #fff;
-    font-family: "DM Sans", sans-serif;
 }
 
 .section-playlist__content .title {
@@ -135,7 +133,6 @@ h1 {
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -188,7 +185,6 @@ h1 {
 
 .disclaimer-premium .disclaimer-premium__title {
     color: #fff;
-    font-family: "DM Sans", sans-serif;
     text-transform: uppercase;
     font-weight: 400;
     font-size: 12px;
@@ -197,7 +193,6 @@ h1 {
 
 .disclaimer-premium .disclaimer-premium__subtitle {
     color: #fff;
-    font-family: "DM Sans", sans-serif;
     font-size: 14px;
     font-weight: 500;
 }
